# blueyeROV_BT

./: .gitignore  README.md  Test2.xml  frames_2025-04-11_23.48.29.gv  launch_docking.sh  launch_docking_real.sh  launch_mission.sh  nigeria_presentation.html  rov_trajectory_map.html  run_simulation_and_screenshot.py  statistical_values.txt
src/blueye_bt/: CMakeLists.txt  package.xml
src/blueye_bt/behavior_trees/: Docking.xml  Docking2.xml  Homing.xml  Homing_old.xml  LastTest.xml  MissionControl.xml  MissionControl2.xml  MissionControl_RL.xml  PipeLineInspection.xml  Project.btproj  ReturnToDock.xml  SystemMonitor.xml  Test.xml  TestDocking.xml  TestDocking_24.xml  TestLearningMission.xml  TestLearningMission2.xml  TestPipelineInspection.xml  TestRL.xml  TestReactivity.xml  TestReactivity2.xml  TestReactivity_OLD.xml  TestStateSequence.xml  Transit_1.xml  Transit_11.xml  Transit_2.xml  Transit_22.xml  UnDocking.xml  WreckageInspection.xml  system_monitor.xml  test_mission.xml
src/blueye_bt/config/: mission_params.yaml
src/blueye_bt/launch/: battery_package.launch.py  blueye_bt.launch.py  mission_manager.launch.py
src/blueye_bt/scripts/: README.md  RL_data_visulization.py  analyze_qtable.py  bt_timeline_visualizer.py  interactive_rl_dashboard.py  mission_q_table.txt  new_mission_q_table.txt  rl_dicision.py  rl_training.py  test_learning_mission.py  view_qtable.py  visulize_q_table.py
src/blueye_bt/src/: battery_management.cpp  battery_percentage_node.cpp  dock_distance_calc.cpp  main.cpp  mission_control_main.cpp  mission_manager_main.cpp  waypoint_obstacle_avoidance.cpp
src/blueye_bt/src/actions/: altitude_control_action.cpp  publish_state.cpp
src/blueye_bt/src/behaviors/: launch_docking_procedure.cpp  load_mission_requirements.cpp  navigate_to_waypoint.cpp  safe_navigate_to_waypoint.cpp  station_keeping.cpp  wait_node.cpp  waypoint_behaviors.cpp
src/blueye_bt/src/conditions/: battery_condition.cpp  blackboard_condition.cpp  camera_condition.cpp  sonar_condition.cpp  system_watchdog.cpp
src/blueye_bt/src/control_nodes/: learning_mission_selector.cpp
src/blueye_bt/src/controllers/: altitude_controller.cpp
src/blueye_bt/src/managers/: mission_control.cpp  mission_manager.cpp
src/blueye_bt_alt/: CMakeLists.txt  package.xml
src/blueye_bt_alt/behavior_trees/: PipeLineInspection.xml  lawnmower.xml  system_monitor.xml  test_mission.xml
src/blueye_bt_alt/config/: mission_params.yaml
src/blueye_bt_alt/launch/: blueye_bt.launch.py  mission_manager.launch.py
src/blueye_bt_alt/src/: battery_management.cpp  main.cpp  mission_control_main.cpp  mission_manager_main.cpp
src/blueye_bt_alt/src/behaviors/: navigate_to_waypoint.cpp  station_keeping.cpp
src/blueye_bt_alt/src/conditions/: battery_condition.cpp  camera_condition.cpp  sonar_condition.cpp  system_watchdog.cpp
src/blueye_bt_alt/src/managers/: mission_control.cpp  mission_manager.cpp
src/blueye_bt_real/: CMakeLists.txt  README.md  package.xml
src/blueye_bt_real/behavior_trees/: AutoModeTest.xml  DepthMission.xml  DockingReal.xml  Docking_Real.xml  FullMissionControlReal.xml  GotoDepth.xml  GotoWaypoint.xml  GotoWaypoint_cc.xml  IntegratedPipelineInspection.xml  Mission.xml  Mission2.xml  MissionControlReal.xml  PipelineDockingMission.xml  TestBatteryCondition.xml  main_mission.xml
src/blueye_bt_real/include/blueye_bt_real/: bt_executor_node.hpp
src/blueye_bt_real/launch/: blueye_bt_mission.launch.py  blueye_bt_real.launch.py
src/blueye_bt_real/scripts/: blueye_rov_trajectory.html  goto_waypoint.py  goto_waypoint_cc.py  goto_waypoint_oldd.py  integrated_pipeline_inspection.py  map_trajectory.py  rov_trajectory_data.json  rov_trajectory_map.html
src/blueye_bt_real/scripts/mission_planner_scripts/: README.md  (+5 more)
src/blueye_bt_real/src/: bt_executor_node.cpp  main.cpp
src/blueye_msgs_real/: CMakeLists.txt  package.xml
src/blueye_msgs_real/msg/: BatteryTel.msg  DepthTel.msg  DvlVelocityTel.msg  PositionEstimateTel.msg
src/blueye_visualization/: CMakeLists.txt
src/blueye_visualization/launch/: rl_visualization.launch.py  rl_visualization.py  visualization.launch.py
src/blueye_visualization/scripts/: 2d_rl.py  3d_rl.py  mission_state_visualizer.py  obstacle_avoidance_visualizer.py  rl_explanation_publisher.py  rl_visualization.py  rov_enhanced_2d_trajectory.py  rov_enhanced_3d_trajectory.py  rov_trajectory_plotter.py  rov_trajectory_plotter_rl.py  rov_visual_2d_xy.py  rov_viz_matplotlib_3d.py  system_health_visualizer.py
src/blueye_visualization_real/: CMakeLists.txt  package.xml
src/blueye_visualization_real/launch/: blueye_visualization_real.launch.py
src/blueye_visualization_real/scripts/: blueye_ros2_bridge.py  blueye_telemetry.py  blueye_trajectory.py  blueye_visulization_2d_enhanced_real.py  blueye_visulization_2d_real.py  blueye_visulization_3d_enhanced_real.py  blueye_visulization_3d_real.py  foxglobe_telemetry.py  low_battery_visualization.py  mission_state_publisher.py
src/gz_battery_management/: CMakeLists.txt  package.xml  setup.py
src/gz_battery_management/gz_battery_management/: battery_management.py  dock_distance_calc.py
src/gz_battery_management/launch/: gz_battery_management.launch.py  mission_nodes.launch.py
src/mundus_mir_msgs_alt/: CMakeLists.txt  package.xml
src/mundus_mir_simulator/gz_robot_monitors/: CMakeLists.txt  README.md  package.xml
src/mundus_mir_utility_toolbox/: CMakeLists.txt  README.md  package.xml
src/mundus_mir_utility_toolbox/src/: distributions.cc  network.cc  orientations.cc  string_methods.cc
src/rov_mission_bt/: CMakeLists.txt  package.xml
src/rov_mission_bt/behavior_trees/: PipeLineInspection.xml  dock_undock_mission.xml  emergency_return.xml  inspection_mission.xml  lawnmower.xml  mission.xml  test_mission.xml
src/rov_mission_bt/config/: mission_params.yaml
src/rov_mission_bt/launch/: mission_manager.launch.py  rov_mission_bt.launch.py
src/rov_mission_bt/src/: main.cpp  mission_control_main.cpp  mission_manager_main.cpp
src/rov_monitor_gui/: CMakeLists.txt  package.xml
src/rov_monitor_gui/src/: rov_monitor_gui.cpp
(+252 files in other folders)
