<?xml version="1.0"?>
<package format="3">
  <name>rov_monitor_gui</name>
  <version>0.0.1</version>
  <description>The ROV Monitor GUI package provides a Qt-based GUI for monitoring and controlling the ROV mission.</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool dependency -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS dependencies -->
  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>mundus_mir_msgs</depend>
  <depend>behaviortree_cpp</depend>

  <!-- Qt5 dependencies -->
  <build_depend>qtbase5-dev</build_depend>
  <exec_depend>qtbase5-dev</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
