<package format="3">
  <name>gz_robot_monitors</name>
  <version>0.1.0</version>
  <description>Monitors for gz_robot in ROS 2</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache 2.0</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend> 
  <build_depend>mundus_mir_msgs</build_depend> 

  <!-- Execution dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend> 
  <exec_depend>mundus_mir_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
